--- a/personform.ui
+++ b/personform.ui
@@ -3,7 +3,7 @@
     User Interface file for the form for contact's data.
 
     Copyright (C) 2011-2021 Stavros Filippidis
-    Contact: sfilippidis@gmail.com
+    Contact: stavros@filippidis.name
 
     This file is part of QGreatstAtzenta.
 
